# Failsafe-API

./: .gitignore  pyproject.toml
api/bungie/: api.py
api/bungie/models/: __init__.py
api/trackergg/: api.py
api/trackergg/models/: character.py  id.py  profile.py  pvpratinghistory.py  pvpweapon.py  sessions.py
d2api/api/: __init__.py
d2api/api/bungie/: __init__.py  api.py
d2api/api/bungie/models/: manifest.py
d2api/api/trackergg/: __init__.py  api.py
d2api/api/trackergg/models/: __init__.py  profile.py  pvphistory.py  pvpseason.py
d2api/utils/: ua.py
utils/: enums.py  exceptions.py
