[tool.poetry]
name = "d2api"
version = "0.0.1"
description = "A python module to get data from destiny2 api with pydantic and async"
authors = ["FYWinds <i@windis.cn>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pydantic = "^1.9.0"
httpx = "^0.21.3"
pyrate-limiter = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
datamodel-code-generator = "^0.11.17"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 89
target-version = ['py39']